2007-10-22  Owen Taylor  <otaylor@redhat.com>

	* modulesets/gnome-2.20.modules: Remove stray reference to 
	gstreamer-plugins-base, convert to gst-plugins-base.

2007-10-19  Owen Taylor  <otaylor@redhat.com>

	* modules/*.modules: Remove --disable-selinux from D-BUS modules,
	at the request of D-BUS author. The configure.ac autodetects.

2007-10-17  Owen Taylor  <otaylor@redhat.com>

	* modulesets/online-desktop.modules: Make bigboard require
	gnome-control-center.

2007-10-17  Richard Hult  <richard@imendio.com>

	* jhbuild/config.py: Use DYLD_FALLBACK_LIBRARY_PATH instead of
	DYLD_LIBRARY_PATH on Mac OS, the latter breaks too many things.

2007-10-17  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.20.modules:
	* modulesets/gnome-2.22.modules: goocanvasmm moved from 
	sourceforge to GNOME svn.

2007-10-15  William Jon McCann  <mccann@jhu.edu>

	* modulesets/gnome-suites-2.22.modules:
	Update gdm deps.

2007-10-16  Olav Vitters  <olav@bkor.dhs.org>

	* modulesets/gnome-2.10.modules: s/gdm2/gdm/
	* modulesets/gnome-2.12.modules:
	* modulesets/gnome-2.14.modules:
	* modulesets/gnome-2.16.modules:
	* modulesets/gnome-2.18.modules:
	* modulesets/gnome-suites-2.20.modules:
	* modulesets/gnome-suites-2.22.modules:

2007-10-15  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/gnome-suites-2.20.modules: deskbar-applet,
	gnome-themes and vino branched for gnome-2-20.

2007-10-15  Colin Walters  <walters@redhat.com>

	* modulesets/online-desktop.modules: Use DBus and dbus-python from git
	to avoid build error.

2007-10-15  Richard Hult  <richard@imendio.com>

	* jhbuild/modtypes/tarball.py: Detect tgz when unpacking, not only when
	getting the local directory, fixes bug #486809.

2007-10-15  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.20.modules: branched gnome-volume-manager
	for GNOME 2.20.

2007-10-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/config.py: set DYLD_LIBRARY_PATH for Mac OS X.
