@@ -1,3 +1,8 @@
+2007-10-23  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/utils/trayicon.py: don't call zenity for trayicon when there
+	is no DISPLAY.
+
 2007-10-22  Owen Taylor  <otaylor@redhat.com>
 
 	* modulesets/gnome-2.20.modules: Remove stray reference to 
